# dexterous-manipulation-tutorial

./: README.md  srdfFix.patch
hand_ik_coupling_plugin/: CMakeLists.txt  README.txt  hand_ik_coupling_plugin.xml  package.xml
hand_ik_coupling_plugin/include/hand_ik_coupling_plugin/: hand_ik_coupling_plugin.h  hand_ik_utils.h
hand_ik_coupling_plugin/src/: hand_ik_coupling_plugin.cpp  hand_ik_utils.cpp
hand_ik_coupling_plugin/test/: hand_kinematics_plugin_test.test  test_kinematics_as_plugin.cpp
kdl_coupling_extension/: CMakeLists.txt  package.xml
kdl_coupling_extension/include/kdl_coupling_extension/: chainiksolverpos_nr_jl_coupling.hpp  chainiksolvervel_wdls_coupling.hpp  chainjnttojacsolver_coupling.hpp
kdl_coupling_extension/src/: chain_coupling.cpp  chainiksolverpos_nr_jl_coupling.cpp  chainiksolvervel_wdls_coupling.cpp  chainjnttojacsolver_coupling.cpp
multifinger_planning_marker/: CMakeLists.txt  package.xml
multifinger_planning_marker/src/: multifinger_planning_marker.cpp
regrasping_app/: CMakeLists.txt  package.xml
regrasping_app/config/: grasps.yaml
regrasping_app/launch/: regrasping.launch
regrasping_app/scripts/: regrasping_app.py
resources/grasps/: grasps.yaml
resources/images/tuto-using/: multifinger-marker-concept.dia
resources/objects/: cup.dae  pen.dae
sr_moveit_hand_config/: .setup_assistant  CMakeLists.txt  package.xml
sr_moveit_hand_config/config/: fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  obstacle_thumb.scene  ompl_planning.yaml  shadowhand_motor.srdf
sr_moveit_hand_config/launch/: default_warehouse_db.launch  demo.launch  move_group.launch  moveit.rviz  planning_context.launch  sensor_manager.launch.xml  trajectory_execution.launch.xml
sr_multi_description/config/: arm_trajectory_controller.yaml  hand_trajectory_controller.yaml
sr_multi_description/launch/: shadow_ur10arm.launch
sr_multi_description/urdf/: shadow_ur10.urdf.xacro  shadow_ur10_joint_limited.urdf.xacro  sr_gazebo.urdf.xacro  ur_gazebo.urdf.xacro
sr_multi_moveit/shadow_ur10_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
sr_multi_moveit/shadow_ur10_moveit_config/config/: controllers.yaml  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ur10shadow.srdf  ur10shadow.srdf.bak  ur10shadow.srdf.bak2
sr_multi_moveit/shadow_ur10_moveit_config/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_planning_and_execution.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  ur10shadow_moveit_controller_manager.launch.xml  ur10shadow_warehouse_db.launch  warehouse.launch
