<package>
  <name>hand_ik_coupling_plugin</name>
  <version>1.0.0</version>
  <description>Simplified version of hand_kinematics for tutorial purpose.</description>
  <maintainer email="gwalck@techfak.uni-bielefeld.de">Guillaume Walck</maintainer>

  <license>GPL</license>

  <url type="repository">https://github.com/guihomework</url>
  <url type="bugtracker">https://github.com/guihomework</url>

  <author>Juan Antonio Corrales Ramon (UPMC)</author>
  <author>Guillaume Walck (CITEC)</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>kdl_parser</build_depend>
  <build_depend>kdl_coupling_extension</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>orocos_kdl</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>moveit_ros_planning</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>rostest</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>kdl_parser</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>moveit_core</run_depend>
  <run_depend>kdl_coupling_extension</run_depend>
  <run_depend>orocos_kdl</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>moveit_msgs</run_depend>
  <run_depend>moveit_ros_planning</run_depend>
  <run_depend>pluginlib</run_depend>
  
  <export>
	  <moveit_core plugin="${prefix}/hand_ik_coupling_plugin.xml" />
  </export>
</package>
